# mobile_mocap

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.cfg
config/camera_calibration/: cam0_calib.yaml  cam1_calib.yaml  stereo_calib.yaml
config/rigid_bodies/: bodies.yaml
include/mobile_mocap/: marker_detector.hpp  publish_feed.hpp  triangulate.hpp
launch/: arducam_bringup.py  calibration.py  triangulate_only.py
msg/: Markers.msg
scripts/: calibrate.py  determine_calib_param.py  rigid_body_tracker.py  setup_cameras.py
src/: find_markers.cpp  publish_feed.cpp  triangulate.cpp
srv/: SetCams.srv
